Modularized project to support JDK 9 and above